<resources>
    <string name="app_name">NetworkDic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_header_title">로그인을 해주세요</string>

    <string name="kakao_app_key">865ad0b97d2eedf8caa637d3c420eeb2</string>
    <string name="facebook_app_id">835667520107823</string>
    <string name="fb_login_protocol_scheme"> fb_login_protocol_scheme</string>

    <string name="menu_home">메인화면</string>
    <string name="menu_asc">전체보기</string>
    <string name="menu_unit">단원보기</string>
    <string name="menu_notice">고객센터</string>
    <string name="menu_userlist">회원목록</string>
    <string name="menu_login">로그인</string>
    <string name="menu_logout">로그아웃</string>
    <string name="menu_join">회원가입</string>
    <string name="menu_bookmark">북마크</string>

    <string name="setid">아이디</string>
    <string name="setpw">비밀번호</string>
    <string name="setpwch">비밀번호 확인</string>
    <string name="setname">이름임</string>
    <string name="setaddr">주소</string>
    <string name="setemail">이메일</string>
    <string name="at">　@　</string>

    <string name="partition">　/　</string>

    <string name="findid">아이디 찾기</string>
    <string name="findpw">비밀번호 찾기</string>
    <string name="autologin">로그인 상태 유지</string>

    <string name="joinContent">본인이 만 14세 이상인 것과 서비스 이용약관, 개인정보 수집 및 이용 동의, 개인정보 처리방침에 동의 하십니까?</string>
    <string name="submit">가입하기</string>
    <string name="cancel">취소하기</string>

    <string name="createright">Copyright 2019. Sunchon National University Computer Education. All rights reserved.</string>
    <string name="r_unit">관련단원</string>
    <string name="r_word">관련단어</string>

    <string name="ex">예시입니다</string>
    <string name="ex_word">AAAAAA</string>
    <string name="ex_content">예시입니다\n\n\n예시가 잘 나올까요?
        제발 잘 나와주었으면 좋겠습니다!!!\n\n\n
        엔터가 이렇게 쓰는게 맞는지 모르겠습니다 이렇게 써서 된다면 참 좋을텐데 말이죠
        예시입니다\n\n\예시가 잘 나올까요?
        제발 잘 나와주었으면 좋겠습니다!!!\n\n\n
        엔터가 이렇게 쓰는게 맞는지 모르겠습니다 이렇게 써서 된다면 참 좋을텐데 말이죠
        예시입니다\n\n\n예시가 잘 나올까요?
        제발 잘 나와주었으면 좋겠습니다!!!\n\n\n\
        엔터가 이렇게 쓰는게 맞는지 모르겠습니다 이렇게 써서 된다면 참 좋을텐데 말이죠
        예시입니다\n\n\n\n예시가 잘 나올까요?
        제발 잘 나와주었으면 좋겠습니다!!!\n\n\n
        엔터가 이렇게 쓰는게 맞는지 모르겠습니다 이렇게 써서 된다면 참 좋을텐데 말이죠\n
        제대로 잘 나오는 것같아서 행복합니다^^
        제발 잘 나와주었으면 좋겠습니다!!!\n\n\n\
        엔터가 이렇게 쓰는게 맞는지 모르겠습니다 이렇게 써서 된다면 참 좋을텐데 말이죠
        예시입니다\n\n\n\n예시가 잘 나올까요?
        제발 잘 나와주었으면 좋겠습니다!!!\n\n\n
        엔터가 이렇게 쓰는게 맞는지 모르겠습니다 이렇게 써서 된다면 참 좋을텐데 말이죠\n
        제대로 잘 나오는 것같아서 행복합니다^^
    </string>



</resources>
