<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_asc"
            android:title="@string/menu_asc" />
        <item
            android:id="@+id/nav_unil"
            android:title="@string/menu_unit" />
        <item
            android:id="@+id/nav_bookmark"
            android:title="@string/menu_bookmark" />
        <item
            android:id="@+id/nav_notice"
            android:title="@string/menu_notice" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_login"
                android:title="@string/menu_login" />
            <item
                android:id="@+id/nav_join"
                android:title="@string/menu_join" />
        </menu>
    </item>

</menu>
