<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="7"
        android:weightSum="10">
        <TextView
            android:id="@+id/dabb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:text="@string/ex_word"
            style="@style/word"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="5.5"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:id="@+id/dfull"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                style="@style/hint_text"
                android:gravity="center|left"
                android:text="@string/ex"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">
            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textOn=" "
                android:textOff=""
                android:background="@drawable/star_off"/>
        </LinearLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:orientation="vertical"
        android:weightSum="2">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/dkcontent"
                style="@style/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_content" />

        </ScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/decontent"
                style="@style/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ex_content" />

        </ScrollView>

    </LinearLayout>
    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="horizontal"
        android:weightSum="10"
        android:gravity="center">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="match_parent"
            android:text="@string/r_unit"
            style="@style/common_text"
            android:padding="10dp"
            android:gravity="center"/>

        <TextView
            android:id="@+id/dunit"
            android:layout_width="0dp"
            android:layout_weight="8"
            android:gravity="center|left"
            android:layout_height="match_parent"
            android:text="@string/ex"
            android:padding="10dp"
            style="@style/common_text"/>
    </LinearLayout>

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="10"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/r_word"
            style="@style/common_text"
            android:layout_weight="2"/>

        <GridView
            android:id="@+id/rl_list"
            android:layout_width="0dp"
            style="@style/common_text"
            android:layout_height="match_parent"
            android:layout_weight="8">
        </GridView>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="bottom|center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/copyright"
            android:text="@string/createright"/>

    </LinearLayout>

</LinearLayout>